--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -4,7 +4,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'splinter'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-b4bc274fdaf0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msplinter\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBrowser\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mbs4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'splinter'"
+     ]
+    }
+   ],
    "source": [
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup\n",
@@ -12,32 +24,38 @@
     "import requests\n",
     "\n",
     "# Splinter allows us to simulate a browser\n",
-    "# From 12/Day 2/ Act 7"
+    "# From 12 / Day 2 / Activity 7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Boilerplate\n",
     "    # Connecting to Chromedriver\n",
+    "        # ChromeDriver is a standalone server that implements the W3C WebDriver standard.\n",
     "    # Initializing browser object\n",
-    "    # Running this code block results in chrome opening with note that is being \n",
-    "        # controlled locally.\n",
+    "    # Running this code block results in chrome opening with note that is being controlled locally.\n",
     "executable_path = {'executable_path': 'chromedriver'}\n",
     "browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NASA Mars News Scrape the NASA Mars News Site and collect the latest News Title and Paragraph Text. Assign the text to variables that you can reference later."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scrape the NASA Mars News Site and collect the Latest News Title and Paragraph Text. \n",
-    "# Simulates the visit to the URL\n",
+    "# With Chrome now open, browser navs and opens URL listed\n",
     "url = 'https://mars.nasa.gov/news/?page=0&per_page=40&order=publish_date+desc%2Ccreated_at+desc&search=&category=19%2C165%2C184%2C204&blank_scope=Latest'\n",
     "browser.visit(url)\n",
     "\n",
@@ -48,22 +66,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NASA's New Mars Rover Will Use X-Rays to Hunt Fossils PIXL, an instrument on the end of the Perseverance rover's arm, will search for chemical fingerprints left by ancient microbes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# NASA Mars News\n",
+    "# Scrape the NASA Mars News Site and collect the Latest News Title and Paragraph Text. \n",
     "result = soup.select_one('ul.item_list li.slide')\n",
-    "title = result.find('div', class_ = 'bottom_gradient').get_text()\n",
-    "para = result.find('div', class_ = 'article_teaser_body').get_text()\n",
-    "print(title, para)"
+    "news_title = result.find('div', class_ = 'bottom_gradient').get_text()\n",
+    "news_p = result.find('div', class_ = 'rollover_description_inner').get_text()\n",
+    "print(news_title, news_p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "JPL Mars Space Images - Featured Image\n",
+    "\n",
+    "Visit the url for JPL Featured Space Image: https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars.\n",
+    "\n",
+    "Use splinter to navigate the site and find the image url for the current Featured Mars Image and assign the url string to a variable called featured_image_url.\n",
+    "\n",
+    "Make sure to find the image url to the full size .jpg image.\n",
+    "\n",
+    "Make sure to save a complete url string for this image."
    ]
   },
   {
@@ -72,164 +99,200 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 9:32\n",
-    "\n",
-    "# Example:\n",
-    "# news_title = \"NASA's Next Mars Mission to Investigate Interior of Red Planet\"\n",
-    "\n",
-    "# news_p = \"Preparation of NASA's next spacecraft to Mars, InSight, has ramped up this summer, \n",
-    "    # on course for launch next May from Vandenberg Air Force Base in central California -- the \n",
-    "    # first interplanetary launch in history from America's West Coast.\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# From https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars\n",
-    "# Use splinter to navigate the site and find the image url for the current Featured \n",
-    "    # Mars Image and assign the url string to a variable called featured_image_url.\n",
-    "# Use splinter to navigate the site and find the image url for the current Featured \n",
-    "    # Mars Image and assign the url string to a variable called featured_image_url.\n",
-    "# Make sure to find the image url to the full size .jpg image\n",
-    "# Make sure to save a complete url string for this image."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Boilerplate scrape setup\n",
     "url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
+    "browser.visit(url)\n",
+    "html = browser.html\n",
+    "url_soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "# Navigate through the \"Full Image\" Button\n",
+    "current_featured_mars_image = browser.find_by_id('full_image')\n",
+    "\n",
+    "# # Clicking through \"Full Image\" button to get to next page    \n",
+    "current_featured_mars_image.click()\n",
+    "\n",
+    "# # Clicking through \"more info\" button to get to next page\n",
+    "browser.is_element_present_by_text('more info')\n",
+    "more_info_2 = browser.links.find_by_partial_text(\"more info\")\n",
+    "more_info_2.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "html = browser.html\n",
+    "url_soup = BeautifulSoup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # # Make sure to save a complete url string for this image.\n",
+    "img_url = url_soup.find('figure', class_=\"lede\")\n",
+    "#print(img_url)\n",
+    "image = img_url.find('a')[\"href\"]\n",
+    "# print(image)\n",
+    "img_url = f\"https://www.jpl.nasa.gov{image}\"\n",
+    "img_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mars Facts\n",
+    "\n",
+    "Visit the Mars Facts webpage https://space-facts.com/mars/ and use Pandas to scrape the table containing facts about the planet including Diameter, Mass, etc.\n",
+    "\n",
+    "Use Pandas to convert the data to a HTML table string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "space_facts_url = 'https://space-facts.com/mars/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tables = pd.read_html(space_facts_url)\n",
+    "tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(tables)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use Pandas to scrape the table containing facts about the planet including Diameter, Mass, etc.\n",
+    "mars_df = tables[1]\n",
+    "mars_df.set_index('Mars - Earth Comparison', inplace=True)\n",
+    "mars_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove Earth column\n",
+    "del mars_df['Earth']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use Pandas to convert the data to a HTML table string.\n",
+    "html_table = mars_df.to_html()\n",
+    "html_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " # Save table directly to a file.\n",
+    "mars_df.to_html('ms_table.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mars Hemispheres\n",
+    "\n",
+    "Visit the USGS Astrogeology site to obtain high resolution images for each of Mar's hemispheres.\n",
+    "https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\n",
+    "\n",
+    "You will need to click each of the links to the hemispheres in order to find the image url to the full resolution image.\n",
+    "\n",
+    "Save both the image url string for the full resolution hemisphere image, and the Hemisphere title containing the hemisphere name. Use a Python dictionary to store the data using the keys img_url and title.\n",
+    "\n",
+    "Append the dictionary with the image url string and the hemisphere title to a list. This list will contain one dictionary for each hemisphere."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# With Chrome now open, browser navs and opens URL listed\n",
+    "url = ' https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
     "browser.visit(url)\n",
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "full_image = browser.find_by_id('full_image')\n",
-    "full_image.click()\n",
+    "#Show HTML for 4 items we are revieweing\n",
+    "result = soup.find_all('div', class_ = \"item\") \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For loop to get full image and image title from 4 item list\n",
     "\n",
-    "browser.is_element_present_by_text('more info')\n",
-    "more_info_2 = browser.find_link_by_partial_text(\"more info\")\n",
-    "more_info_2.click()\n",
-    "\n",
-    "\n",
-    "html = browser.html\n",
-    "url_soup = BeautifulSoup(html, 'html.parser')\n",
-    "\n",
-    "img_url = url_soup.select_one('figure.lede').find('a')[\"href\"]\n",
-    "img_url_full = f\"https://www.jpl.nasa.gov{img_url}\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA18826_hires.jpg'"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "img_url_full = f\"https://www.jpl.nasa.gov{img_url}\"\n",
-    "img_url_full"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Visit the Mars Facts webpage here and use Pandas to scrape the table containing facts \n",
-    "    # about the planet including Diameter, Mass, etc.\n",
-    "table = \n",
-    "pd.read_html()    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use Pandas to convert the data to a HTML table string."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Visit the USGS Astrogeology site \n",
-    "    # https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\n",
-    "    # to obtain high resolution images for each of Mar's hemispheres."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# You will need to click each of the links to the hemispheres in order to find the image url \n",
-    "    # to the full resolution image.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save both the image url string for the full resolution hemisphere image, and the Hemisphere \n",
-    "    # title containing the hemisphere name. Use a Python dictionary to store the data using the \n",
-    "    # keys img_url and title.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Append the dictionary with the image url string and the hemisphere title to a list. \n",
-    "    # This list will contain one dictionary for each hemisphere."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Example:\n",
-    "# hemisphere_image_urls = [\n",
-    "#     {\"title\": \"Valles Marineris Hemisphere\", \"img_url\": \"...\"},\n",
-    "#     {\"title\": \"Cerberus Hemisphere\", \"img_url\": \"...\"},\n",
-    "#     {\"title\": \"Schiaparelli Hemisphere\", \"img_url\": \"...\"},\n",
-    "#     {\"title\": \"Syrtis Major Hemisphere\", \"img_url\": \"...\"},\n",
-    "# ]\n",
-    "\n",
-    "For Loop"
+    "for item in result:\n",
+    "    \n",
+    "    # Hemisphere title containing the hemisphere name\n",
+    "    title = item.find(\"div\", class_=\"description\")\n",
+    "    title2 = title.find('a', class_ = \"itemLink product-item\").find('h3').get_text()\n",
+    "    print(title2) # Delivers: 4 lines with: Cerberus,Schiaparelli,Syrtis,Valles Marineris Hemis \n",
+    "    \n",
+    "    # Creates the 4 image URLs to follow in order to navigate to the full picture pages for scraping\n",
+    "    url = item.find('a', class_ = \"itemLink product-item\")[\"href\"]\n",
+    "    full_url = f\"https://astrogeology.usgs.gov{url}\"\n",
+    "#   print(full_url) # NOT USED, Comment out before finalizing script. This is just a navigation \n",
+    "    \n",
+    "    # Boilerplate scrape setup\n",
+    "    browser.visit(full_url)\n",
+    "    html = browser.html\n",
+    "    url_soup = BeautifulSoup(html, 'html.parser')\n",
+    "    full_img_url = url_soup.find(\"div\", class_ = \"downloads\") \n",
+    "    result = full_img_url.select_one('ul li a')['href']\n",
+    "    print(result)\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pythondata] *",
+   "display_name": "Python [conda env:anaconda3]",
    "language": "python",
-   "name": "conda-env-pythondata-py"
+   "name": "conda-env-anaconda3-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -241,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
